[feat]: add endpoint to get the auth user avatar
